Fix navbar size on smaller screen and hamburger menu button #9

--- a/src/style/Art.css
+++ b/src/style/Art.css
@@ -7,18 +7,19 @@
     width: 30vh;
     display: block;
     margin: 0 auto;
+    
 }
 
 .motive {
     width: 10vw;
-    padding-left: 17vmax;
-    padding-right: 8vmax;
+    padding-left: 15vmax;
+    padding-right: 9vmax;
     vertical-align: top;
 }
 
 .text {
-    padding-left: 17vmax;
-    padding-right: 8vmax;
+    padding-left: 15vmax;
+    padding-right: 10vmax;
     font-size: 4vh;
     font-weight: bold;
     background-color: #666666;
@@ -40,7 +41,15 @@
     }
 }
 
+
+
 @media screen and (max-height: 720px) {
+    .text {
+        font-size: 3vh;
+    }
+}
+
+@media screen and (max-width: 420px) {
     .text {
         font-size: 3vh;
     }
